--- a/agenda/src/app/features/contacto-form/contacto-form.html
+++ b/agenda/src/app/features/contacto-form/contacto-form.html
@@ -2,9 +2,9 @@
 <div class="grid grid-cols-2 gap-4 justify-center content-center h-screen bg-indigo-300">
   <div class="p-4 mx-3 bg-white shadow-lg">
     @if (alerta() == true) {
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <div class="alert alert-success " role="alert">
       El contacto fue guardado con éxito
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
     </div>
     }
 
